Result set truncation with implied limit (ESQL-450)
Resolves ESQL-443 

This PR ensures that query results are truncated after reaching a
certain size. This limit is enforced by injecting a `Limit` operator at
the top of the logical plan. The limit is then pushed down as far as
possible to avoid unnecessary evaluations.

The limit can be controlled with the
`esql.query.result_truncation_max_size` setting. It could also be named
`fetch_size` (as in SQL) but the setting has a somewhat different
effect. In SQL, `fetch_size` controls how much data is provided per
request and additional data can be requested with the scroll cursor.
Since there is no scrolling in ESQL, the result set is truncated after a
certain number of records. As mentioned in ESQL-443, a similar name is used
in Kusto to control the truncation size.